// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCard Component should allow being disabled: disabled 1`] = `""`;

exports[`GraphCard Component should render a basic component: basic 1`] = `
<Fragment>
  <ContextProvider
    value={
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [
            {
              "id": "Core-seconds",
              "isCapacity": false,
              "isStacked": true,
              "isStandalone": false,
              "isThreshold": false,
              "strokeWidth": 2,
            },
          ],
        },
      }
    }
  >
    <GraphCardChart
      t={[Function]}
      useGetGraphTally={[Function]}
      useGraphCardContext={[Function]}
      useMetricsSelector={[Function]}
      useProduct={[Function]}
      useProductGraphTallyQuery={[Function]}
    />
  </ContextProvider>
</Fragment>
`;

exports[`GraphCard Component should setup basic settings: settings 1`] = `
<Fragment>
  <ContextProvider
    value={
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [
            {
              "id": "Core-seconds",
              "isCapacity": false,
              "isStacked": true,
              "isStandalone": false,
              "isThreshold": false,
              "strokeWidth": 2,
            },
          ],
        },
      }
    }
  >
    <GraphCardChart
      t={[Function]}
      useGetGraphTally={[Function]}
      useGraphCardContext={[Function]}
      useMetricsSelector={[Function]}
      useProduct={[Function]}
      useProductGraphTallyQuery={[Function]}
    />
  </ContextProvider>
  <ContextProvider
    key="graphCard_undefined"
    value={
      {
        "settings": {
          "isStandalone": true,
          "metric": {
            "id": "Sockets",
            "isCapacity": false,
            "isStacked": true,
            "isStandalone": true,
            "isThreshold": false,
            "strokeWidth": 2,
          },
          "metrics": [
            {
              "id": "Sockets",
              "isCapacity": false,
              "isStacked": true,
              "isStandalone": true,
              "isThreshold": false,
              "strokeWidth": 2,
            },
          ],
          "padding": {
            "bottom": 75,
            "left": 75,
            "right": 45,
            "top": 45,
          },
        },
      }
    }
  >
    <GraphCardMetricTotals
      t={[Function]}
      useMetricsSelector={[Function]}
      useProductGraphTallyQuery={[Function]}
    >
      <GraphCardChart
        t={[Function]}
        useGetGraphTally={[Function]}
        useGraphCardContext={[Function]}
        useMetricsSelector={[Function]}
        useProduct={[Function]}
        useProductGraphTallyQuery={[Function]}
      />
    </GraphCardMetricTotals>
  </ContextProvider>
</Fragment>
`;
